<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">libvlcrs VR demo</string>
    <string name="player_name">VR player</string>
    <string name="loading">starting…</string>
    <string name="open_document">Open a video file…</string>
    <string name="media_list_title">Bundled self-test media (generated by CI)</string>
    <string name="mode">Mode</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="eye_default">Eye: Left</string>
    <string name="eye_label">Eye: %1$s</string>
    <string name="gyro_on">Gyro: on</string>
    <string name="gyro_off">Gyro: off</string>
    <string name="recenter">Re-centre</string>
</resources>
